...
    },
    {
      title: "Inverted Test",
      destination: "InvertedTest",
    },
    {
      title: "RecyclerView Handler Test",
      destination: "RecyclerViewHandlerTest",
    },
    {
      title: "Contacts",
      destination: "Contacts",
    },
...
